--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-# .gitlab-ci.yml
-
 stages:
   - build
 
@@ -7,7 +5,7 @@ build_docs:
   stage: build
   script:
     - pip install -r requirements.txt  # Install Sphinx and other dependencies
-    - make -C docs html  # Replace 'docs' with the actual path to your documentation directory
+    - /bin/bash -c "make -C docs html"  # Use /bin/bash as the shell
   artifacts:
     paths:
       - docs/build/html/
