update required dependencies

--- a/environment.yaml
+++ b/environment.yaml
@@ -2,7 +2,7 @@ name: barotropic_env
 #channels:
 #  - conda-forge
 dependencies:
-  - python=3.9
+  - python=3.11
   - pip
   - pip:
     - numpy
@@ -21,3 +21,5 @@ dependencies:
     - sphinx-rtd-theme
     - pydata-sphinx-theme
     - numpydoc
+    - yaml
+    - keyboard
