--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ CoolProp = "^6.6.0"
 PyYAML = "^6.0.1"
 toml = "^0.10.2"
 cycler = "^0.12.1"
+parse = "^1.20.2"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.24.0"
