--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -34,14 +34,14 @@ jobs:
     - name: Install dependencies
       run: |
         source "$(conda info --base)/etc/profile.d/conda.sh"
-        conda activate pysolver_env
+        conda activate barotropy
         pip install poetry
         poetry install
 
     - name: Build Sphinx documentation
       run: |
         source "$(conda info --base)/etc/profile.d/conda.sh"
-        conda activate pysolver_env
+        conda activate barotropy
         cd docs
         python build_docs.py
 
