fix publish to PyPI action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,5 +109,6 @@ jobs:
         TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
       run: |
+        echo $TWINE_USERNAME
         poetry build
         poetry publish --username $TWINE_USERNAME --password $TWINE_PASSWORD
