--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ docs/build/
 environment.pickle
 
 # Output directories
-_output/
-_results/
+_output*/
+_results*/
 
 # Jupyter Notebook checkpoints
 .ipynb_checkpoints/
