--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ toml = "^0.10.2"
 cycler = "^0.12.1"
 parse = "^1.20.2"
 ansys-fluent-core = "^0.26.1"
+pexpect = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.24.0"
