update gitignore and docs

--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,4 @@ settings.json    # VS Code settings file
 .bat
 
 
-projects/nakagawa_2009/3D meshes MAN/*.msh
+projects/nakagawa_2009/3D_meshes_MAN/*.msh
