--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,23 +9,25 @@ repository = "https://github.com/turbo-sim/barotropy"
 documentation = "https://turbo-sim.github.io/barotropy/"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-numpy = "^1.26.4"
-scipy = "^1.14.1"
-matplotlib = "^3.9.2"
-pandas = "^2.2.3"
-openpyxl = "^3.1.2"
 CoolProp = "^6.6.0"
-PyYAML = "^6.0.1"
+python = ">=3.11,<3.14"
+numpy = "^2.2.4"
+scipy = "^1.15.2"
+matplotlib = "^3.10.1"
+pandas = "^2.2.3"
+openpyxl = "^3.1.5"
+PyYAML = "^6.0.2"
 toml = "^0.10.2"
 cycler = "^0.12.1"
 parse = "^1.20.2"
 pexpect = "^4.9.0"
+pysolver_view = "^0.4.6"
+# pysolver_view = { path = "../pysolver_view/", develop = true }
 
 [tool.poetry.group.dev.dependencies]
-ipython = "^8.24.0"
-black = "^24.4.2"
-pytest = "^8.2.1"
+ipython = ">=8.13,<8.17"
+black = "^25.1.0"
+pytest = "^8.3.5"
 pyzotero = "^1.5.19"
 numpydoc = "^1.7.0"
 sphinx = "^7.3.7"
@@ -37,7 +39,7 @@ sphinxawesome-theme = "^5.1.5"
 sphinx-design = "^0.6.0"
 sphinx-togglebutton = "^0.3.2"
 bump2version = "^1.0.1"
-ansys-fluent-core = "^0.26.1"
+ansys-fluent-core = "^0.30.2"
 
 [build-system]
 requires = ["poetry-core"]
