--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -21,29 +21,18 @@ jobs:
       with:
         python-version: '3.11'  
 
-    - name: Set up Miniconda
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Install Poetry
+      uses: abatilo/actions-poetry@v3
       with:
-        auto-update-conda: true
-        python-version: '3.11'  
+        poetry-version: "1.8.2"  # Or latest version
 
-    - name: Create conda environment
-      run: |
-        conda env create -f environment.yaml
-
-    - name: Install dependencies
-      run: |
-        source "$(conda info --base)/etc/profile.d/conda.sh"
-        conda activate barotropy_env
-        pip install poetry
-        poetry install
+    - name: Install dependencies (including dev)
+      run: poetry install
 
     - name: Build Sphinx documentation
       run: |
-        source "$(conda info --base)/etc/profile.d/conda.sh"
-        conda activate barotropy_env
         cd docs
-        python build_docs.py
+        poetry run python build_docs.py
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
