--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,11 @@ sphinxcontrib-bibtex = "^2.6.2"
 sphinxawesome-theme = "^5.1.5"
 sphinx-design = "^0.6.0"
 sphinx-togglebutton = "^0.3.2"
+sphinx-autobuild = "^2024.10.3"
+myst-parser = "^4.0.1"
 bump2version = "^1.0.1"
 ansys-fluent-core = "^0.30.2"
-myst-parser = "^4.0.1"
+
 
 [build-system]
 requires = ["poetry-core"]
