--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ sphinx-autobuild = "^2024.10.3"
 myst-parser = "^4.0.1"
 bump2version = "^1.0.1"
 ansys-fluent-core = "^0.30.2"
-
+gmsh = "^4.13.1"
 
 [build-system]
 requires = ["poetry-core"]
