--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,10 @@ toml = "^0.10.2"
 cycler = "^0.12.1"
 parse = "^1.20.2"
 pexpect = "^4.9.0"
-#pysolver_view = "^0.6.2"
-#coolpropx = "^0.1.0"
-pysolver_view = { path = "../pysolver_view/", develop = true }
-coolpropx = { path = "../coolpropx/", develop = true }
+pysolver_view = "^0.6.2"
+coolpropx = "^0.1.0"
+#pysolver_view = { path = "../pysolver_view/", develop = true }
+#coolpropx = { path = "../coolpropx/", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 ipython = ">=8.13,<8.17"
