--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pysolver_view = "^0.6.2"
 coolpropx = "^0.1.0"
 #pysolver_view = { path = "../pysolver_view/", develop = true }
 #coolpropx = { path = "../coolpropx/", develop = true }
+gmsh = "^4.14.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = ">=8.13,<8.17"
