--- a/.github/workflows/publish_to_pypi.yaml
+++ b/.github/workflows/publish_to_pypi.yaml
@@ -61,7 +61,7 @@ jobs:
 
     needs: [test_ubuntu, test_windows]
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -70,6 +70,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'
+
+    # - name: Install system dependencies (Ubuntu only)
+    #   run: sudo apt-get update && sudo apt-get install -y libglu1-mesa
 
     - name: Install Poetry
       uses: abatilo/actions-poetry@v3
