--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ repository = "https://github.com/turbo-sim/barotropy"
 documentation = "https://turbo-sim.github.io/barotropy/"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.14"
-numpy = "^2.2.4"
-scipy = "^1.15.2"
-matplotlib = "^3.10.1"
+python = ">=3.11,<3.14"
+numpy = "^2.3.0"
+scipy = "^1.16.1"
+matplotlib = "^3.10.6"
 pandas = "^2.2.3"
 openpyxl = "^3.1.5"
 PyYAML = "^6.0.2"
@@ -21,9 +21,8 @@ cycler = "^0.12.1"
 parse = "^1.20.2"
 pexpect = "^4.9.0"
 pysolver_view = "^0.6.2"
-coolpropx = "^0.2.20"
-#pysolver_view = { path = "../pysolver_view/", develop = true }
-#coolpropx = { path = "../coolpropx/", develop = true }
+# coolpropx = "^0.2.20"
+jaxprop = { path = "../jaxprop/", develop = true }
 gmsh = { version = "^4.14.0", optional = true }
 ansys-fluent-core = { version = "^0.30.2", optional = true }
 
